# Allidatar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
allidatar/: __init__.py
allidatar/client/: __init__.py  client.py  sensor.py  upgrade.py
allidatar/sensor/: __init__.py  sensor.py
allidatar/server/: __init__.py  routes.py  server.py
tests/: test_client.py  test_hello.py  test_sensor.py  test_server.py
tests/server/data/: config.json
