[build-system]
requires = ["setuptools>=80.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project]
name = "allidatar"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name="Lennart Ochel", email="lennart.ochel@outlook.com" }
]
dependencies = [
  "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/lochel/Allidatar"
"Bug Tracker" = "https://github.com/lochel/Allidatar/issues"
