[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
version_file = "allidatar/version.py"

[project]
name = "allidatar"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name="Lennart Ochel", email="lennart.ochel@outlook.com" }
]
dependencies = [
  "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/lochel/Allidatar"
"Bug Tracker" = "https://github.com/lochel/Allidatar/issues"

[project.scripts]
allidatar-client = "allidatar.client:main"
allidatar-server = "allidatar.server:main"
